--- a/bhavCopy_FE/public/css/style.css
+++ b/bhavCopy_FE/public/css/style.css
@@ -1,5 +1,5 @@
 html { 
-  background: url(../images/bg3.jpg) no-repeat center center fixed; 
+  /*background: url(../images/bg3.jpg) no-repeat center center fixed; */
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -113,7 +113,7 @@ textarea {
 .spinner {
   width: 40px;
   height: 40px;
-  background-color: #fff;
+  background-color: #00dcff;
 
   margin: 100px auto;
   -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
